[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/General/wood tile a.png" type="Texture" id=1]
[ext_resource path="res://Assets/General/wood tile b.png" type="Texture" id=2]
[ext_resource path="res://Scripts/FloorLayer.gd" type="Script" id=3]
[ext_resource path="res://Objects/CollidableBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Gary's House/Interior/fig leaf.png" type="Texture" id=5]
[ext_resource path="res://Assets/Gary's House/Interior/bed.png" type="Texture" id=6]
[ext_resource path="res://Assets/Gary's House/Interior/sink.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Exit.gd" type="Script" id=17]
[ext_resource path="res://Players/Gary/Gary Misc.png" type="Texture" id=18]
[ext_resource path="res://Assets/General/circle shadow small.png" type="Texture" id=19]
[ext_resource path="res://Assets/General/rectangle shadow small.png" type="Texture" id=20]
[ext_resource path="res://Scripts/FloorSetter.gd" type="Script" id=21]
[ext_resource path="res://Scripts/SimpleCamera2D.gd" type="Script" id=23]
[ext_resource path="res://Scripts/Area_Target.gd" type="Script" id=24]
[ext_resource path="res://Scripts/CollisionV2.gd" type="Script" id=25]
[ext_resource path="res://Transition.tscn" type="PackedScene" id=26]

[sub_resource type="TileSet" id=1]
0/name = "wood tile a.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wood tile b.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 18 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 18 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 18 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=174]
animations = [ {
"frames": [ SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="WorldRoot" type="Node2D"]

[node name="BlueBckgd" type="Sprite" parent="."]
visible = false
position = Vector2( 223, -111 )

[node name="YSort" type="YSort" parent="."]
position = Vector2( 0, -25.9 )

[node name="FloorTiles" type="TileMap" parent="YSort"]
position = Vector2( -55.5, 41.5 )
rotation = -0.0349066
z_index = -1
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 63, 28 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -196610, 1, 0, -196609, 0, 0, -262144, 1, 0, -262143, 0, 0, -262142, 1, 0, -262141, 0, 0, -131074, 0, 0, -131073, 1, 0, -196608, 0, 0, -196607, 1, 0, -196606, 0, 0, -196605, 1, 0, -65538, 1, 0, -65537, 0, 0, -131072, 1, 0, -131071, 0, 0, -131070, 1, 0, -131069, 0, 0, -2, 0, 0, -1, 1, 0, -65536, 0, 0, -65535, 1, 0, -65534, 0, 0, -65533, 1, 0, 65534, 1, 0, 65535, 0, 0, 0, 1, 0, 1, 0, 0, 2, 1, 0, 3, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 1, 0, 65538, 0, 0, 65539, 0, 0, 131072, 0, 0, 131073, 1, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="YSort"]
visible = false
position = Vector2( 85.3757, -120.083 )
z_index = 1
frames = SubResource( 174 )
frame = 1
playing = true

[node name="MatA" type="Sprite" parent="YSort"]
position = Vector2( -106, 85 )
rotation = 0.00583901

[node name="WallB" type="Sprite" parent="YSort"]
position = Vector2( -97, -60.1 )
rotation = -0.106988
scale = Vector2( 0.961229, 0.728922 )

[node name="WallB2" type="Sprite" parent="YSort"]
visible = false
position = Vector2( 106, 6 )
centered = false
offset = Vector2( -120, -219 )
flip_h = true

[node name="MatB" type="Sprite" parent="YSort"]
visible = false
position = Vector2( -3.72015, -15.9964 )
rotation = 0.00740846

[node name="Window" type="Sprite" parent="YSort"]
visible = false
position = Vector2( -80.7202, -73.9964 )
rotation = 0.00583901

[node name="Curtains" type="Sprite" parent="YSort/Window"]
position = Vector2( -2, 1 )

[node name="Sink" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( -125, 51.9 )
grid_size = Vector2( 1.6, 0.8 )
texture = ExtResource( 7 )
texture_offset = Vector2( -2, 16 )
height = 32.0

[node name="Cabinets" type="Sprite" parent="YSort"]
visible = false
position = Vector2( -57.967, -83.117 )
rotation = -0.00349066
scale = Vector2( 1.014, 0.993 )

[node name="Painting" type="Sprite" parent="YSort"]
visible = false
position = Vector2( 78.2798, -80.9964 )
rotation = 0.00583901

[node name="ShadowSquare" type="Sprite" parent="YSort"]
visible = false
self_modulate = Color( 1, 1, 1, 0.956863 )
position = Vector2( 151.28, 33.0036 )
rotation = -0.00420222
texture = ExtResource( 20 )

[node name="Dresser" type="Sprite" parent="YSort"]
visible = false
position = Vector2( 154.28, 19.0036 )
rotation = 0.00583901

[node name="Radio" type="Sprite" parent="YSort/Dresser"]
position = Vector2( -16, -33 )

[node name="Lamp" type="Sprite" parent="YSort/Dresser"]
position = Vector2( 15, -29 )

[node name="ShadowCircle" type="Sprite" parent="YSort"]
visible = false
self_modulate = Color( 1, 1, 1, 0.815686 )
position = Vector2( 6.27985, 110.004 )
texture = ExtResource( 19 )

[node name="FigLeaf" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 10, 108.9 )
texture = ExtResource( 5 )
texture_offset = Vector2( 0, 22 )
height = 82.0

[node name="Bed" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( -12, -14.1 )
grid_size = Vector2( 1, 1.5 )
texture = ExtResource( 6 )
texture_offset = Vector2( 0, 15 )
height = 24.0

[node name="CollisionRoot" type="Node2D" parent="."]

[node name="CollisionPolygon" type="Node" parent="CollisionRoot"]
script = ExtResource( 25 )

[node name="Layer3" type="CollisionPolygon2D" parent="CollisionRoot/CollisionPolygon"]
visible = false
position = Vector2( -49, 9.10001 )
polygon = PoolVector2Array( 50, -77, 185, -14, 163, -5, 215, 18, 55, 90, -8.39905, 60.1853, -39, 73.9, -102, 43.9, -68.4242, 31.9573, -130, 3 )
script = ExtResource( 3 )

[node name="LayerArea" type="Area2D" parent="CollisionRoot"]
script = ExtResource( 21 )

[node name="ZoneArea" type="Area2D" parent="CollisionRoot"]
position = Vector2( 17, -2 )
collision_layer = 2
input_pickable = false
script = ExtResource( 17 )
target_scene = "res://Gary_s House.tscn"
exit_name = "OutsideHouse"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CollisionRoot/ZoneArea"]
position = Vector2( -164, 89 )
polygon = PoolVector2Array( -28, -23, 2, -36, 63, -6, 32, 6 )

[node name="ExitInsideHouse" type="Node2D" parent="CollisionRoot"]
position = Vector2( -75, 43 )
script = ExtResource( 24 )
door_name = "InsideHouse"
direction = Vector2( 1, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -40 )
offset = Vector2( 0, -20 )
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 23 )
offset = Vector2( 0, -20 )
minPos = Vector2( 0, -70 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Transition" parent="CanvasLayer" instance=ExtResource( 26 )]

[connection signal="body_entered" from="CollisionRoot/ZoneArea" to="CollisionRoot/ZoneArea" method="_on_body_entered"]
